# tracker

./: .gitignore  README.md  cabal.project  flake.nix
tracker/: tracker.cabal
tracker/lib/: CLI.hs  Interpreter.hs  Project.hs  SetupDatabase.hs  TrackerRepository.hs
tracker/lib/Logic/: TimeEntryLogic.hs
tracker/lib/Models/: Project.hs  TimeEntry.hs
tracker/lib/Persistence/: DatabaseUtils.hs  SetupDatabase.hs  TrackerRepository.hs
tracker/src/: Main.hs
tracker/test/: SetupDatabaseSpec.hs  TestUtils.hs  TrackerRepositorySpec.hs
tracker/test/Logic/: TimeEntryLogicSpec.hs
tracker/test/Persistence/: DatabaseUtilsSpec.hs  SetupDatabaseSpec.hs  TrackerRepositorySpec.hs
