cabal-version:   3.0
name:            tracker 
version:         0.1.0.0
license:         NONE
author:          Joe
maintainer:      joe@example.com
build-type:      Simple

common settings
    ghc-options: -Wall
    default-language: GHC2021

library 
  import: settings
  build-depends: 
    , base
    , text
    , time
    , filepath
    , directory
    , sqlite-simple
    , optparse-applicative
  hs-source-dirs: lib
  exposed-modules: 
    Project,
    Persistence.TrackerRepository,
    Persistence.DatabaseUtils,
    Logic.TimeEntryLogic,
    Interpreter,
    CLI

executable tracker 
  import:           settings
  main-is:          Main.hs
  default-language: GHC2021
  build-depends:   
    , base
    , tracker
  hs-source-dirs:   src

test-suite tracker-tests
  type: exitcode-stdio-1.0
  hs-source-dirs: test
  default-language: GHC2021
  main-is: Spec.hs
  build-tool-depends: hspec-discover:hspec-discover == 2.*
  other-modules:
    Persistence.TrackerRepositorySpec
    Persistence.DatabaseUtilsSpec
  build-depends:
    , base
    , text
    , sqlite-simple
    , hspec 
    , hspec-contrib 
    , tracker
